Bug 369535 - Extracting files from .rpm via drag-and-drop makes wrong paths
Summary: Extracting files from .rpm via drag-and-drop makes wrong paths
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.08.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL: https://software.opensuse.org/downloa...
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-29 15:17 UTC by Fabian Vogt
Modified: 2016-10-01 08:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2016-09-29 15:17:10 UTC
It seems like Ark swallows the first few characters of folders in RPMs when extracting.
The folders are named correctly in the ark window.
Similiar RPMs cause the same behaviour.

Reproducible: Always

Steps to Reproduce:
1. Open the .aarch64.rpm package downloadable via the URL with ark
2. Open /tmp in dolphin
3. Drag and drop the files in boot/ form ark to dolphin

Actual Results:  
The files get extracted to /tmp/ot/

Expected Results:  
The files get extracted to /tmp/boot/
Comment 1 Elvis Angelaccio 2016-09-29 15:26:33 UTC
Hmm, weird. I can reproduce.
Comment 2 Elvis Angelaccio 2016-09-30 15:20:36 UTC
Patch up for review: https://phabricator.kde.org/D2895
Comment 3 Elvis Angelaccio 2016-10-01 08:20:41 UTC
Git commit 94d8567d46b5529e65805ba8d95611bcc53d8aa2 by Elvis Angelaccio.
Committed on 01/10/2016 at 08:17.
Pushed by elvisangelaccio into branch 'Applications/16.08'.

Fix drag-and-drop with RPM archives

RPM paths start with ./ so removing the rootNode substring starting
from index 0 is wrong.
FIXED-IN: 16.08.2

Differential Revision: D2895

M  +11   -0    autotests/kerfuffle/archivetest.cpp
A  +-    --    autotests/kerfuffle/data/firmware-pine64-20160329-6.1.aarch64.rpm
M  +7    -8    plugins/libarchive/libarchiveplugin.cpp

http://commits.kde.org/ark/94d8567d46b5529e65805ba8d95611bcc53d8aa2