Fix drag-and-drop with RPM archives

RPM paths start with ./ so removing the rootNode substring starting
from index 0 is wrong.

BUG: 369535
FIXED-IN: 16.08.2

Differential Revision: D2895